--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,11 +7,11 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=no')
     // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
     
-    meta(name='description', content='The explorer for Ethereum ERC20 based tokens')
-    meta(name='author', content='bitfly')
+    meta(name='description', content='The explorer for GPYX token')
+    meta(name='author', content='GPYX')
     meta(name='keywords', content='ethereum, explorer, blockchain, etherchain, cryptocurrency, cryptocurrencies, bitcoin, erc20')
         
-    title ERC20 Explorer
+    title GPYX Explorer
     
     link(href=config.bootstrapUrl, rel="stylesheet", crossorigin="anonymous")    
     link(rel='stylesheet', href='/stylesheets/style.css')
@@ -26,7 +26,7 @@ html(lang="en")
             span.icon-bar
             span.icon-bar
           |  
-          a.navbar-brand(href='/') ERC20 Explorer
+          a.navbar-brand(href='/') GPYX Explorer
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
             li
@@ -41,7 +41,7 @@ html(lang="en")
               input.form-control#search(type='text', placeholder='Account', name='search')
             |  
             button.btn.btn-default(type='submit') Submit
-    .container  
+    .container#container  
       block content
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
@@ -53,6 +53,4 @@ html(lang="en")
     div.container
       hr
       footer
-        p  
-          a(href="https://github.com/gobitfly/erc20-explorer") ERC20 Explorer
-          |  | #{nodeStatus.version} | #{nodeStatus.nbrPeers} Peers connected
+        p  #{nodeStatus.version} | #{nodeStatus.nbrPeers} Peers connected
